# EMOP_in_JEPA

./: .env.example  .gitignore  AGENTS.md  pyproject.toml  readme.md
docs/AB/: compile.sh  whiteBoard.md
docs/AB/latex/: main.tex  references.bib
docs/AB/papers/geraudsPapers/: IlluminatingSearchSpacesByMappingElites.md  SafetyGym.md
docs/ideation/: compile.sh  whiteBoard.md
docs/ideation/latex/: main.tex  references.bib
docs/litReview/: compile.sh
docs/litReview/latex/: main.tex  references.bib
docs/papers/geraudsPapers/: ApprxGradsForDiffQDinRL.md  ROSARL.md
docs/researchProp/: compile.sh
docs/researchProp/latex/: main.tex  references.bib
experiments/src/: cmaes.py  exp1.py  llamaguard.py  lora.py  main.py  model.py  models.py
experiments/src/logs/attack_20260419_224800/: config.json
experiments/src/logs/attack_20260420_074932/: config.json  gen_001.json  gen_002.json  gen_003.json  gen_004.json  gen_005.json  gen_006.json  gen_007.json  gen_008.json
experiments/src/logs/attack_20260420_081431/: config.json
scripts/: _common.sh  local_setup.sh  vast_onstart.sh  vast_setup.sh
