[project]
name = "safetydial"
version = "0.1.0"
description = "SafetyDial: selection pressure for safe latent planning in JEPA"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.26",
    "torch>=2.2",
    "gymnasium>=0.29",
    "wandb>=0.16",
    "pymoo>=0.6",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
src = ["src", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
